--- a/pages/compraya.html
+++ b/pages/compraya.html
@@ -5,72 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comida Para Hupers</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <!--BARRA DE NAVEGACION-->
     <header>
-        <img class="logo" src="./img/Logo.jpg" alt="Logo">
+        <img class="logo" src="../img/Logo.jpg" alt="Logo">
         <button id="abrir" class="abrir-menu" aria-label="Abrir-menu"><i class="bi bi-text-center"></i></button>
         <nav class="nav" id="nav">
             <button id="cerrar-menu" class="cerrar-menu" aria-label="Cerrar-menu"><i class="bi bi-x-circle-fill"></i></button>
             <ul class="nav-list">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/compraya.html">Compra Ya!</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/compraya.html">Compra Ya!</a></li>
                 <li><a href="https://www.correoargentino.com.ar/formularios/e-commerce" target="_blank" rel="noopener noreferrer">Busca tu Pedido</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                <li><a href="./pages/devoluciones.html">Devoluciones</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../pages/devoluciones.html">Devoluciones</a></li>
                 <li><a class="boton__carrito" href="./pages/carrito.html"><i class="bi bi-cart-fill"></i></a></li>
             </ul>
         </nav>
     </header>
     <!--FIN BARRA DE NAVEGACION-->
-    <main>
-        <section class="hero">
-            <div class="hero__text">
-                <h1 class="title">Comida para Hupers</h1>
-                <h4 class="title__2">Tienda On-line de Basketball.</h4>
-            </div>
-        </section>
 
-
-        <div><h5 class="title__3">Best-Sellers</h5></div>
-        <section class="grid">
-            <div class="grid__item grid__item1">
-                <h5>Kobe Brayant</h5>
-            </div>
-            <div class="grid__item grid__item2">
-                <h5>LeBron James</h5>
-            </div>
-            <div class="grid__item grid__item3">
-                <h5>Stephen Curry</h5>
-            </div>
-        </section>
-    </main>
-
-    <section class="events">
-        <div class="inner">
-            <div class="inner__left">
-                <h5>PRODUCTOS 100% ORIGINALES</h5>
-                <p>Todos nuestros productos son originales, hacemos envíos a todo el país, y ofrecemos una garantía asegurada.</p>
-                <a href="./pages/compraya.html" class="inner__buttom">¡Compra Ya!</a>
-
-                <img class="inner__img" src="./img/events__img2.jpg" alt="marcas">
-            </div>
-            <div class="inner__right">
-                <img src="./img/events__img.png" alt="productos original">
-
-            </div>
-        </div>
-
+    <!--CONTENIDO PRINCIPAL-->
+    <section class="section">
+        <h3 class="section__title">Todos nuestros Productos</h3>
     </section>
 
 
 
 
 
-    <footer class="footer_footer">
+
+
+
+
+    <!--FIN CONTENDIO PRINCIPAL-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--FOOTER-->
+    <footer class="footer_footer"></footer>
         <div class="footer">
             <div class="footer__top">
                 <div>
@@ -78,7 +71,7 @@
                     <p>La pasión de nuestros clientes nos impulsa a seguir avanzando cada día. Nos encantaría formar parte del camino que te lleve a cualquier objetivo que te propongas. A nuestra manera, siempre estamos de tu lado.</p>
                 </div>
                 <div class="footer__marca">
-                    <img class="logo" src="./img/Logo.jpg" alt="Logo">
+                    <img class="logo" src="../img/Logo.jpg" alt="Logo">
                     <p class="footer__p">Comida para Huppers.</p>
                 </div>
             </div>
@@ -103,7 +96,7 @@
             
         </div>
     </footer>
-    
+    <!--FIN DE FOOTER-->
     <script src="./js/main.js"></script>
 </body>
 </html>
